--- a/newswars/requirements.txt
+++ b/newswars/requirements.txt
@@ -1,4 +1,8 @@
+asgiref==3.5.2
 Django==2.2
+django-cors-headers==3.13.0
 djangorestframework==3.13.1
+djangorestframework-api-key==2.2.0
+gunicorn==20.1.0
 pytz==2022.2.1
 sqlparse==0.4.2
